--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <span class="title">Converter Coin</span>
+        <span class="title">$ Coin Trip</span>
             <form id="coin-form" method="post">
                 <div class="form-container">
                 <label for="value">Valor da moeda:</label>
